--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angular2-jsonapi": "^3.5.1",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "ng2-bs3-modal": "^0.10.4",
