--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "ag-grid": "^13.1.2",
+    "ag-grid-angular": "^13.1.1",
     "angular2-jsonapi": "^3.5.1",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
